// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Func → Decompiler → Pseudocode snapshot dicts 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 119863 */
function (arg1, arg0) {
    var5, var6 = NULLSWAPIFNOT(x=DICTGET(n=8, D=arg1, k=arg0));
    return var5, var6
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot ifs 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    return arg1, arg0, arg1
    // decompilation error: RangeError: Invalid array length
    ADDCONST c=-10
    PUSH i=s1
    ADDCONST c=20
    OVER2 
    MUL 
    PUSH2 i=s4, j=s3
    GREATER 
    PUSHCONT_SHORT s=function (arg4, arg3, arg2, arg1, arg0) {
        return arg0, arg4, arg1
        // decompilation error: RangeError: Invalid array length
        DIV 
        ADD 
    }
    PUSHCONT_SHORT s=function (arg4, arg3, arg2, arg1, arg0) {
        return arg0, arg3, arg2
        // decompilation error: RangeError: Invalid array length
        DIV 
        ADD 
    }
    IFELSE 
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot multi arg use 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    var9 = ((arg1 + arg0) + arg1) + arg0;
    return var9
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot simple arithmetic 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    var0 = arg1 + arg0;
    return var0
}
"
`;
